@@ -1,5 +1,9 @@
 2004-10-16  Damien Sandras  <dsandras@gnome.org>
 
+	* lib/contacts/gm_contacts-remote.cpp: Fixed misplaced free.
+	
+2004-10-16  Damien Sandras  <dsandras@gnome.org>
+
 	* src/addressbook_window.cpp: Made LDAP columns resizable.
 
 2004-10-16  Damien Sandras  <dsandras@gnome.org>
